# prtop

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
src/: app.rs  colors.rs  config.rs  diff.rs  dismiss.rs  error.rs  lib.rs  main.rs  notify.rs  poller.rs  types.rs
src/github/: client.rs  mod.rs  query.rs  types.rs
src/tui/: event.rs  mod.rs  terminal.rs  ui.rs
tests/: diff_logic.rs  github_response.rs
tests/fixtures/: search_response.json
